# msp_offboard_controller

./: .gitignore  CMakeLists.txt  package.xml
include/minimum_jerk_trajectories/: RapidTrajectoryGenerator.h
include/msp_offboard_controller/: msp_node_base.hpp  msp_offboard_controller.hpp  msp_px4.h
include/msp_offboard_controller/minimum_jerk_trajectories/: RapidTrajectoryGenerator.h
include/msp_offboard_controller/segment_trajectory_generator/: MSPRapidTrajectoryGenerator.h  utils.h
include/msp_offboard_controller/types/: PlanItem.h  StateTriplet.h
include/segment_trajectory_generator/: MSPRapidTrajectoryGenerator.h  SegmentedTrajectoryPlanner.h
include/types/: MSPTrajectory.h  PlanItem.h  StateTriplet.h  Vec3.h
src/: msp_offboard_controller.cpp
src/lib/RapidTrajectoryGenerator/: RapidTrajectoryGenerator.cpp
src/lib/SegmentTrajectoryGenerator/: MSPRapidTrajectoryGenerator.cpp  SegmentedTrajectoryPlanner.cpp
